[tool.poetry]
name = "hpc-status-server"
version = "0.1.0"
description = ""
authors = ["0xKits <kitsgit@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
psutil = "^6.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
